@@ -1,0 +1,4 @@
+#
+add_executable(callback_plain_c++ test_main.c)
+target_link_libraries(callback_plain_c++ dyncallback_s dyncall_s)
+
